# OpenDIAlyzer

./: .gitignore  CLEAN-ROOM.md  CMakeLists.txt  LICENSE  README.md
docs/: DESIGN.md  OpenDIALibGen.md
experiments/: build_library.sh  compare_results.py  count_osw.py  diann_lib_to_openswath.py  odia_rescore.py  run_diann_sub.sh  run_full_arm.sh  run_odia_arm.sh  run_openswath.sh  s1_percolation.py
src/: odia_index.cpp  odia_info.cpp  odia_modpredict_test.cpp  odia_modx_test.cpp  odia_score.h  odia_score_test.cpp  opendialibgen.cpp
src/testdata/: peptdeep_modx_reference.json
vendored-patches/: README.md
vendored-patches/OpenMS/: PeptDeepModX.h  peptdeep-mod-support.patch
